--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+*{
+    font-weight: bold;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.head{
+    text-align: center;
+    padding: 1vw;
+    color: azure;
+    background-image: linear-gradient(to left,black,rgb(61, 61, 61));
+    margin: 0.5vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form{
+    margin-left: 34%;
+    width: 30vw;
+    padding: 1.5vw;
+    background-color: cadetblue;
+    border-radius: 0.3vw;
+    box-shadow: 0.2vw 0.3vw 0.3vw 0 blue;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input{
+    padding: 1vw;
+    margin-top: 0.25vw;
+    color: rgb(61, 61, 61);
+    width: 80%;
+    border-radius: 0.3vw;
+    border-color: sandybrown;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+    width: 5vw;
+    color: white;
+    background-color: green;
+    padding: 0.5vw;
+    border-radius: 0.2vw;
+    cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+    margin-left: 42%;
+    margin-top: 1vw;
+    padding: 1vw;
+    box-shadow: 0.2vw 0.2vw 0.1vw goldenrod;
+    background-color: rgb(255, 193, 170);
+    border-radius: 0.3vw;
+    width: 15vw;
+    height: auto;
+}
+img{
+    margin-left: 4.5vw;
+    width: 6vw;
+    height: 6vw;
+}
+#emailaddress{
+    color: blue;
+    cursor: pointer;
 }
